# cairo-bitwork

./: .gitignore  Cargo.toml  README.md  Scarb.toml  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: ins.js  ins.rs  ins.ts
src/: ins_v2.cairo  lib.cairo
src/contracts/: ins.cairo
tests/: ins_test.cairo
